// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AdminService > aggregates monetization usage, cost, and conversion rates 1`] = `
{
  "affiliate": {
    "appCtrPercent": 0,
    "appImpressions": 0,
    "appTaps": 0,
    "cancels": 0,
    "commissionKrw": 0,
    "coupangClicks": 0,
    "earningsPerClickKrw": null,
    "entryPlacements": [],
    "gmvKrw": 0,
    "lastSyncedAt": null,
    "orderConversionPercent": 0,
    "orders": 0,
    "placements": [],
  },
  "conversion": {
    "barcodeRewardGrantPercent": 0,
    "creditPackToPurchasePercent": 0,
    "paywallToPurchasePercent": 20,
    "rewardedAdVerificationPercent": 75,
  },
  "daily": [
    {
      "aiCostUsd": 0,
      "day": "2026-07-11",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-12",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-13",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-14",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-15",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-16",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-17",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-18",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-19",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-20",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-21",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-22",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-23",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-24",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-25",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-26",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-27",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-28",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-29",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-30",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-31",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-08-01",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-08-02",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-08-03",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-08-04",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-08-05",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-08-06",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-08-07",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-08-08",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0.02,
      "day": "2026-08-09",
      "recommendations": 2,
    },
  ],
  "economicsBySource": [
    {
      "estimatedAiCostKrw": null,
      "estimatedContributionKrw": null,
      "estimatedContributionMarginPercent": null,
      "estimatedNetRevenueKrw": null,
      "events": 4,
      "source": "jango_plus",
    },
    {
      "estimatedAiCostKrw": null,
      "estimatedContributionKrw": null,
      "estimatedContributionMarginPercent": null,
      "estimatedNetRevenueKrw": null,
      "events": 0,
      "source": "rewarded_ad",
    },
    {
      "estimatedAiCostKrw": null,
      "estimatedContributionKrw": null,
      "estimatedContributionMarginPercent": null,
      "estimatedNetRevenueKrw": null,
      "events": 0,
      "source": "paid_credit",
    },
    {
      "estimatedAiCostKrw": null,
      "estimatedContributionKrw": null,
      "estimatedContributionMarginPercent": null,
      "estimatedNetRevenueKrw": null,
      "events": 0,
      "source": "jango_household",
    },
  ],
  "economicsConfigured": false,
  "funnel": [
    {
      "control": 10,
      "event": "paywall_viewed",
      "other": 0,
      "total": 10,
      "valueFirst": 0,
    },
    {
      "control": 8,
      "event": "rewarded_ad_requested",
      "other": 0,
      "total": 8,
      "valueFirst": 0,
    },
    {
      "control": 6,
      "event": "rewarded_ad_verified",
      "other": 0,
      "total": 6,
      "valueFirst": 0,
    },
    {
      "control": 2,
      "event": "purchase_verified",
      "other": 0,
      "total": 2,
      "valueFirst": 0,
    },
  ],
  "period": {
    "days": 30,
    "from": "2026-07-11T15:00:00.000Z",
    "to": "2026-08-10T03:00:00.000Z",
  },
  "plusPlans": [
    {
      "activeSubscribers": 0,
      "estimatedContributionKrw": null,
      "estimatedContributionMarginPercent": null,
      "estimatedNetRevenueKrw": null,
      "photoAiCostKrw": null,
      "photoMonthlyQuotaReachPercent": 0,
      "planCode": "jango_plus",
      "recipeAiCostKrw": null,
      "recipeMonthlyQuotaReachPercent": 0,
    },
    {
      "activeSubscribers": 0,
      "estimatedContributionKrw": null,
      "estimatedContributionMarginPercent": null,
      "estimatedNetRevenueKrw": null,
      "photoAiCostKrw": null,
      "photoMonthlyQuotaReachPercent": 0,
      "planCode": "jango_household",
      "recipeAiCostKrw": null,
      "recipeMonthlyQuotaReachPercent": 0,
    },
  ],
  "retention": {
    "cohorts": [],
    "d30Percent": 0,
    "d7Percent": 0,
  },
  "totals": {
    "activeSubscribers": 4,
    "activeUsers": 2,
    "arppuKrw": null,
    "cancelledSubscribers": 1,
    "completedRecommendations": 2,
    "estimatedAiCostKrw": null,
    "estimatedAiCostUsd": 0.02,
    "estimatedContributionKrw": null,
    "estimatedContributionMarginPercent": null,
    "estimatedMrrKrw": null,
    "estimatedNetRevenueKrw": null,
    "newSubscribers": 1,
    "p95AiCostPerRecommendationKrw": null,
    "paidCreditPurchases": 2,
    "paidCreditsSold": 20,
    "periodStartSubscribers": 5,
    "refundEventSharePercent": 33.33,
    "refundTransactions": 1,
    "renewalDecisionRatePercent": 50,
    "renewedSubscribers": 1,
    "subscriberChurnRatePercent": 20,
    "totalTokens": 1800,
  },
  "unitEconomics": {
    "paidCredit": {
      "costCoverageMultiple": null,
      "estimatedAiCostPerRecommendationKrw": null,
      "estimatedRevenuePerCreditKrw": null,
      "status": "unconfigured",
      "targetCoverageMultiple": 3,
    },
    "rewardedAd": {
      "costCoverageMultiple": null,
      "estimatedAiCostPerRecommendationKrw": null,
      "estimatedRevenuePerVerifiedKrw": null,
      "status": "unconfigured",
      "targetCoverageMultiple": 1,
    },
  },
  "usageBySource": [
    {
      "count": 5,
      "source": "free",
    },
    {
      "count": 3,
      "source": "subscription",
    },
  ],
}
`;

exports[`AdminService > uses core inventory activity for retention and evaluates unit economics 1`] = `
{
  "affiliate": {
    "appCtrPercent": 0,
    "appImpressions": 0,
    "appTaps": 0,
    "cancels": 0,
    "commissionKrw": 0,
    "coupangClicks": 0,
    "earningsPerClickKrw": null,
    "entryPlacements": [],
    "gmvKrw": 0,
    "lastSyncedAt": null,
    "orderConversionPercent": 0,
    "orders": 0,
    "placements": [],
  },
  "conversion": {
    "barcodeRewardGrantPercent": 0,
    "creditPackToPurchasePercent": 100,
    "paywallToPurchasePercent": 0,
    "rewardedAdVerificationPercent": 0,
  },
  "daily": [
    {
      "aiCostUsd": 0,
      "day": "2026-07-11",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-12",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-13",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-14",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-15",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-16",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-17",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-18",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-19",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-20",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-21",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-22",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-23",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-24",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-25",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-26",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-27",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-28",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-29",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-30",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-07-31",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-08-01",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-08-02",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-08-03",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-08-04",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-08-05",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-08-06",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-08-07",
      "recommendations": 0,
    },
    {
      "aiCostUsd": 0.02,
      "day": "2026-08-08",
      "recommendations": 2,
    },
    {
      "aiCostUsd": 0,
      "day": "2026-08-09",
      "recommendations": 0,
    },
  ],
  "economicsBySource": [
    {
      "estimatedAiCostKrw": 10,
      "estimatedContributionKrw": 10,
      "estimatedContributionMarginPercent": 50,
      "estimatedNetRevenueKrw": 20,
      "events": 1,
      "source": "rewarded_ad",
    },
    {
      "estimatedAiCostKrw": 10,
      "estimatedContributionKrw": 90,
      "estimatedContributionMarginPercent": 90,
      "estimatedNetRevenueKrw": 100,
      "events": 1,
      "source": "paid_credit",
    },
    {
      "estimatedAiCostKrw": 0,
      "estimatedContributionKrw": 0,
      "estimatedContributionMarginPercent": null,
      "estimatedNetRevenueKrw": 0,
      "events": 0,
      "source": "jango_plus",
    },
    {
      "estimatedAiCostKrw": 0,
      "estimatedContributionKrw": 0,
      "estimatedContributionMarginPercent": null,
      "estimatedNetRevenueKrw": 0,
      "events": 0,
      "source": "jango_household",
    },
  ],
  "economicsConfigured": true,
  "funnel": [],
  "period": {
    "days": 30,
    "from": "2026-07-11T15:00:00.000Z",
    "to": "2026-08-10T03:00:00.000Z",
  },
  "plusPlans": [
    {
      "activeSubscribers": 0,
      "estimatedContributionKrw": 0,
      "estimatedContributionMarginPercent": null,
      "estimatedNetRevenueKrw": 0,
      "photoAiCostKrw": 0,
      "photoMonthlyQuotaReachPercent": 0,
      "planCode": "jango_plus",
      "recipeAiCostKrw": 0,
      "recipeMonthlyQuotaReachPercent": 0,
    },
    {
      "activeSubscribers": 0,
      "estimatedContributionKrw": 0,
      "estimatedContributionMarginPercent": null,
      "estimatedNetRevenueKrw": 0,
      "photoAiCostKrw": 0,
      "photoMonthlyQuotaReachPercent": 0,
      "planCode": "jango_household",
      "recipeAiCostKrw": 0,
      "recipeMonthlyQuotaReachPercent": 0,
    },
  ],
  "retention": {
    "cohorts": [
      {
        "cohort": "2026-08-01",
        "d30Percent": null,
        "d7Percent": 100,
        "users": 1,
      },
    ],
    "d30Percent": 0,
    "d7Percent": 100,
  },
  "totals": {
    "activeSubscribers": 0,
    "activeUsers": 1,
    "arppuKrw": 120,
    "cancelledSubscribers": 0,
    "completedRecommendations": 2,
    "estimatedAiCostKrw": 20,
    "estimatedAiCostUsd": 0.02,
    "estimatedContributionKrw": 100,
    "estimatedContributionMarginPercent": 83.33,
    "estimatedMrrKrw": 0,
    "estimatedNetRevenueKrw": 120,
    "newSubscribers": 0,
    "p95AiCostPerRecommendationKrw": 10,
    "paidCreditPurchases": 1,
    "paidCreditsSold": 5,
    "periodStartSubscribers": 0,
    "refundEventSharePercent": 0,
    "refundTransactions": 0,
    "renewalDecisionRatePercent": 0,
    "renewedSubscribers": 0,
    "subscriberChurnRatePercent": 0,
    "totalTokens": 2000,
  },
  "unitEconomics": {
    "paidCredit": {
      "costCoverageMultiple": 2,
      "estimatedAiCostPerRecommendationKrw": 10,
      "estimatedRevenuePerCreditKrw": 20,
      "status": "review",
      "targetCoverageMultiple": 3,
    },
    "rewardedAd": {
      "costCoverageMultiple": 2,
      "estimatedAiCostPerRecommendationKrw": 10,
      "estimatedRevenuePerVerifiedKrw": 20,
      "status": "healthy",
      "targetCoverageMultiple": 1,
    },
  },
  "usageBySource": [
    {
      "count": 1,
      "source": "rewarded_ad",
    },
    {
      "count": 1,
      "source": "paid_credit",
    },
  ],
}
`;
